The ending "\" is now automatically trimmed from the offload destination.

--- a/ssd_offload/App.config
+++ b/ssd_offload/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <ssd_offload.Properties.Settings>
             <setting name="OffloadDest" serializeAs="String">
-                <value>E:\ssd_symlink_targets\</value>
+                <value>E:\ssd_symlink_targets</value>
             </setting>
         </ssd_offload.Properties.Settings>
     </userSettings>
